--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     <title>Travel</title>
 </head>
 <body>
-    <p>hello world</p>
+    <!--Start of Header-->
+    <header class="jumbotron back-img" style="background-image: url(img/travel-cover2.jpg);">
+        <div class="container">
+            <img src="img/travel.png" alt="">
+            <button type="button" class="login-btn">Login</button>
+        </div>
+        <h1>Travel Across The Globe</h1>
+        <p>Subscribe world tour in youtube channel</p>
+    </header>
+    <!--Start of Header-->
 
      <!-- jquery popper js-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
