--- a/index.html
+++ b/index.html
@@ -27,9 +27,40 @@
             <button type="button" class="login-btn">Login</button>
         </div>
         <h1>Travel Across The Globe</h1>
-        <p>Subscribe world tour in youtube channel</p>
-    </header>
-    <!--Start of Header-->
+        <p>Subscribe world tour in youtube</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search country or city">
+            <div class="input-group-append">
+                <button type="submit" class="input-group-text btn">Search</button>
+            </div>
+        </div>
+    </header><!--End of header-->
+    <!--Start of Features-->
+    <div class="features">
+        <h1>Featured Destinations</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-img"><img src="img/train-4.jpeg" alt="train-4">
+                        <div class="price">
+                            <p>78$</p>
+                        </div>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <i class="far fa-star"></i>
+                    </div></div>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+
+    </div><!--End of Features-->
 
      <!-- jquery popper js-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
