--- a/index.html
+++ b/index.html
@@ -35,31 +35,95 @@
             </div>
         </div>
     </header><!--End of header-->
+   
     <!--Start of Features-->
     <div class="features">
         <h1>Featured Destinations</h1>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4"><!--Start of Col-1--> 
                     <div class="feature-box">
-                        <div class="feature-img"><img src="img/train-4.jpeg" alt="train-4">
-                        <div class="price">
-                            <p>78$</p>
+                        <div class="feature-img">
+                            <img src="img/loaction-2.jpg" alt="train-4">
+                            <div class="price">
+                                <p>78$</p>
+                            </div>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <i class="far fa-star"></i>
+                            </div>
                         </div>
-                    <div class="ratings">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                        <i class="far fa-star"></i>
-                    </div></div>
-                    </div>
-                </div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                        <div class="feature-details">
+                            <h4>Los Angeles</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum est officiis maxime facere vero reiciendis labore architecto repellendus iusto eligendi.</p>
+                            <div>
+                                <span><i class="fa fa-map-marker-alt"></i>Los Angeles</span>
+                                <span><i class="far fa-sun"></i>4 Days</span>
+                                <span><i class="far fa-moon"></i>3 Nights</span>
+                            </div>
+                        </div>
+                    </div>         
+                </div> <!--End of Col-1--> 
+                <div class="col-md-4"><!--Start of Col-2-->
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="img/beach-4.jpg" alt="train-4">
+                            <div class="price">
+                                <p>98$</p>
+                            </div>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                
+                            </div>
+                        </div>
+                        <div class="feature-details">
+                            <h4>Durban</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum est officiis maxime facere vero reiciendis labore architecto repellendus iusto eligendi.</p>
+                            <div>
+                                <span><i class="fa fa-map-marker-alt"></i>Durban</span>
+                                <span><i class="far fa-sun"></i>4 Days</span>
+                                <span><i class="far fa-moon"></i>3 Nights</span>
+                            </div>
+                        </div>
+                    </div> 
+
+                </div>    <!--End of Col-2-->  
+                <div class="col-md-4"><!--Start of Col-3-->
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="img/beach-3.jpg" alt="train-4">
+                            <div class="price">
+                                <p>108$</p>
+                            </div>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="feature-details">
+                            <h4>Malasiya</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum est officiis maxime facere vero reiciendis labore architecto repellendus iusto eligendi.</p>
+                            <div>
+                                <span><i class="fa fa-map-marker-alt"></i>Malasiya</span>
+                                <span><i class="far fa-sun"></i>4 Days</span>
+                                <span><i class="far fa-moon"></i>3 Nights</span>
+                            </div>
+                        </div>
+                    </div> 
+
+                </div>    <!--End of Col-3-->       
             </div>
         </div>
-
     </div><!--End of Features-->
 
      <!-- jquery popper js-->
